# Rider-Pc

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  Dockerfile  E2E_TESTING_SUMMARY.md  IMPLEMENTATION_COMPLETE_PHASE3.md  IMPLEMENTATION_COMPLETE_PHASE4.md  IMPLEMENTATION_STATUS.md  MONITORING_SETUP.md  Makefile  PROVIDER_IMPLEMENTATION_GUIDE.md  QUICKSTART.md  README.md  TASK_QUEUE_SETUP.md  api_exchange.yaml  docker-compose.yml  mypy.ini  package-lock.json  package.json  pc_client_architecture.md  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-local.txt  requirements.txt  rider_pi_device_architecture.md  run.sh
.github/: copilot-instructions.md
.idx/: dev.nix
.venv-agent/: pyvenv.cfg
api-specs/: README.md  control.md
api-specs_pl/: NAWIGATOR.md  README.md  STEROWANIE.md
config/: camera.toml  choreography.toml  css_dynamic_whitelist.json  face.toml  google_assistant_devices.toml  google_bridge.toml  google_home.toml  grafana-dashboard.json  jupyter.toml  motion.toml  motion.toml.example  motion_actions.toml  prometheus-alerts.yml  prometheus.yml  providers.toml  providers_text_local.toml  text_provider.toml  vision.toml.example  vision_provider.toml  voice.toml  voice_gemini_example.toml  voice_gemini_file.toml  voice_local_file.toml  voice_openai_file.toml  voice_openai_streaming.toml  voice_openai_streaming_fallback.toml  voice_provider.toml  voice_web.toml.example
docs/: AI_MODEL_CONFIGURATION.md  AI_MODEL_SETUP.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  QUICKSTART.md  (+9 more)
(+277 files in other folders)
