[project]
name = "rider-pc"
version = "0.0.0"
requires-python = ">=3.9"
description = "PC-side client for Rider-PI"
readme = "README.md"

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = [
  ".venv",
  "data",
  "logs",
  "snapshots",
  "build",
  "dist",
  "__pycache__",
  "*.egg-info",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402", "F401", "F811", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["pc_client"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "preserve"
